[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/flame1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/flame2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Southwold/mobs/FireMob.gd" type="Script" id=3]
[ext_resource path="res://audio/mobhit.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.3044
height = 0.0

[node name="FireMob" type="Area2D" groups=[
"Mob",
]]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="area_entered" from="." to="." method="_on_FireMob_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_FireMob_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
